--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
   <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
   <meta name="author" content="themefisher.com">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Kinga wellness Healthcare center</title>
 
   <!-- Favicon -->
