--- a/service.html
+++ b/service.html
@@ -4,7 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
   <meta name="author">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Kinga wellness Healthcare center</title>
 
   <!-- Favicon -->
