Somehow it worked!!

--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
 					<img src="images/team/1.jpg" alt="" class="img-fluid w-100">
 
 					<div class="content">
-						<h4 class="mt-4 mb-0"><a href="#">John Marshal</a></h4>
+						<h4 class="mt-4 mb-0"><a href="#">John Kinyua</a></h4>
 						<p>Internist, Emergency Physician</p>
 					</div>
 				</div>
@@ -240,7 +240,7 @@
 					<img src="images/team/2.jpg" alt="" class="img-fluid w-100">
 
 					<div class="content">
-						<h4 class="mt-4 mb-0"><a href="#">Marshal Root</a></h4>
+						<h4 class="mt-4 mb-0"><a href="#">Marshal Omondi</a></h4>
 						<p>Surgeon, Сardiologist</p>
 					</div>
 				</div>
@@ -251,7 +251,7 @@
 					<img src="images/team/3.jpg" alt="" class="img-fluid w-100">
 
 					<div class="content">
-						<h4 class="mt-4 mb-0"><a href="doctor-single.html">Siamon john</a></h4>
+						<h4 class="mt-4 mb-0"><a href="doctor-single.html">Simon john</a></h4>
 						<p>Internist, General Practitioner</p>
 					</div>
 				</div>
@@ -261,7 +261,7 @@
 					<img src="images/team/4.jpg" alt="" class="img-fluid w-100">
 
 					<div class="content">
-						<h4 class="mt-4 mb-0"><a href="doctor-single.html">Rishat Ahmed</a></h4>
+						<h4 class="mt-4 mb-0"><a href="doctor-single.html">Mohammed Ahmed</a></h4>
 						<p>Orthopedic Surgeon</p>
 					</div>
 				</div>
@@ -288,7 +288,7 @@
 						<span>John Partho</span>
 					</div>
 					<p>
-						They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.
+						They have amazing service!
 					</p>
 					<i class="icofont-quote-right"></i>
 					
@@ -297,10 +297,10 @@
 				<div class="testimonial-block">
 					<div class="client-info">
 						<h4>Expert doctors!</h4>
-						<span>Mullar Sarth</span>
+						<span>Mullar Joseph</span>
 					</div>
 					<p>
-						They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.
+						They got the best doctors!
 					</p>
 					<i class="icofont-quote-right"></i>
 				</div>
@@ -308,10 +308,10 @@
 				<div class="testimonial-block">
 					<div class="client-info">
 						<h4>Good Support!</h4>
-						<span>Kolis Mullar</span>
+						<span>Collins Kimutai</span>
 					</div>
 					<p>
-						They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.
+						Good Support from the staff
 					</p>
 					<i class="icofont-quote-right"></i>
 				</div>
@@ -319,10 +319,10 @@
 				<div class="testimonial-block">
 					<div class="client-info">
 						<h4>Nice Environment!</h4>
-						<span>Partho Sarothi</span>
+						<span>Partricia Musemi</span>
 					</div>
 					<p>
-						They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.
+						The Environment is very conducive for patients
 					</p>
 					<i class="icofont-quote-right"></i>
 				</div>
@@ -330,10 +330,10 @@
 				<div class="testimonial-block">
 					<div class="client-info">
 						<h4>Modern Service!</h4>
-						<span>Kolis Mullar</span>
+						<span>Comic Nutelli</span>
 					</div>
 					<p>
-						They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.
+						Their service, Acha tu
 					</p>
 					<i class="icofont-quote-right"></i>
 				</div>
