--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,9 @@
                 <div class="section-title text-center">
                     <h2 class="text-md mb-2">Contact us</h2>
                     <div class="divider mx-auto my-4"></div>
-                    <p class="mb-5">Laboriosam exercitationem molestias beatae eos pariatur, similique, excepturi mollitia sit perferendis maiores ratione aliquam?</p>
+                    <p class="mb-5">
+						Easily leave us a message, We will contact you within the next 12 hours! 
+					</p>
                 </div>
             </div>
         </div>
