did something awesome, Check it out!!!

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <textarea name="message" id="message" class="form-control" rows="6" placeholder="Your Message"></textarea>
                     </div>
 
-                    <a class="btn btn-main btn-round-full" href="appoinment.html" >Make Appoinment <i class="icofont-simple-right ml-2  "></i></a>
+                    <a class="btn btn-main btn-round-full" id="submitBtn" href="/confirmation.html"> Make Appoinment <i class="icofont-simple-right ml-2  "></i></a>
                 </form>
             </div>
 			</div>
@@ -577,6 +577,7 @@
     
     <script src="js/script.js"></script>
     <script src="js/contact.js"></script>
+	<script src="js/appointment.js"></script>
 
   </body>
   </html>
