--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <form id="contact-form" class="contact__form " method="post" action="mail.php">
+                <form id="contact-form" class="contact__form ">
                  <!-- form message -->
                     <div class="row">
                         <div class="col-12">
@@ -203,7 +203,7 @@
                     </div>
 
                     <div class="text-center">
-                        <input class="btn btn-main btn-round-full" name="submit" type="submit" value="Send Messege"></input>
+                        <input class="btn btn-main btn-round-full" name="submit" type="submit" id="submitBtn"></input>
                     </div>
                 </form>
             </div>
