--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Kinga wellness Healthcare center</title>
+  <style>
+	/* Add your existing CSS here */
+	
+	/* Spinner CSS */
+	.spinner {
+		display: none;
+		width: 50px;
+		height: 50px;
+		border: 5px solid lightgray;
+		border-top: 5px solid blue;
+		border-radius: 50%;
+		animation: spin 1s linear infinite;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
 
+	@keyframes spin {
+		0% { transform: rotate(0deg); }
+		100% { transform: rotate(360deg); }
+	}
+</style>
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 
@@ -134,7 +156,7 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-support-faq"></i>
                     <h5>Email Us</h5>
-					kengawellness@gmail.com
+					kingawellness@gmail.com
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
@@ -205,6 +227,8 @@
                     <div class="text-center">
                         <input class="btn btn-main btn-round-full" name="submit" type="submit" id="submitBtn"></input>
                     </div>
+
+					<div class="spinner" id="spinner"></div>
                 </form>
             </div>
         </div>
