--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
   <meta name="author" content="themefisher.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Novena- Health & Care Medical template</title>
+  <title>Kinga wellness Healthcare center</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
