--- a/appoinment.html
+++ b/appoinment.html
@@ -7,6 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Kinga wellness Healthcare center</title>
+  <style>
+	.spinner {
+		display: none;
+		width: 50px;
+		height: 50px;
+		border: 5px solid lightgray;
+		border-top: 5px solid blue;
+		border-radius: 50%;
+		animation: spin 1s linear infinite;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	@keyframes spin {
+		0% { transform: rotate(0deg); }
+		100% { transform: rotate(360deg); }
+	}
+</style>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -198,7 +218,10 @@
                     </div>
 
                     <a class="btn btn-main btn-round-full" href="/confirmation.html" id="submitBtn" >Make Appoinment<i class="icofont-simple-right ml-2"></i></a>
+					
                 </form>
+
+				<div class="spinner" id="spinner"></div>
             </div>
         </div>
       </div>
