--- a/service.html
+++ b/service.html
@@ -65,13 +65,6 @@
 			   <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 			    <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
 
-			    <!-- <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="department.html" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Department <i class="icofont-thin-down"></i></a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown02">
-						<li><a class="dropdown-item" href="department.html">Departments</a></li>
-						<li><a class="dropdown-item" href="department-single.html">Department Single</a></li>
-					</ul>
-			  	</li> -->
 
 			  	<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="doctor.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products <i class="icofont-thin-down"></i></a>
@@ -81,14 +74,6 @@
 					</ul>
 			  	</li>
 
-			   <!-- <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="blog-sidebar.html" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <i class="icofont-thin-down"></i></a>
-					<ul class="dropdown-menu" aria-labelledby="dropdown05">
-						<li><a class="dropdown-item" href="blog-sidebar.html">Blog with Sidebar</a></li>
-
-						<li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
-					</ul>
-			  	</li> -->
 			   <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 			</ul>
 		  </div>
@@ -106,12 +91,6 @@
         <div class="block text-center">
           <span class="text-white">Our services</span>
           <h1 class="text-capitalize mb-5 text-lg">What We Do</h1>
-
-          <!-- <ul class="list-inline breadcumb-nav">
-            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-            <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item"><a href="#" class="text-white-50">Our services</a></li>
-          </ul> -->
         </div>
       </div>
     </div>
@@ -124,10 +103,11 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-block mb-5">
-					<img src="images/service/service-1.jpg" alt="" class="img-fluid">
+					<img src="images/service/child-10.jpg" alt="" class="img-fluid">
 					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">Child care</h4>
-						<p class="mb-4">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
+						<h4 class="mt-4 mb-2 title-color">Spine Care</h4>
+						<p class="mb-4">
+							We offer Spine Care at our facility, Welcome!! </p>
 					</div>
 				</div>
 			</div>
@@ -137,7 +117,7 @@
 					<img src="images/service/service-2.jpg" alt="" class="img-fluid">
 					<div class="content">
 						<h4 class="mt-4 mb-2  title-color">Personal Care</h4>
-						<p class="mb-4">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
+						<p class="mb-4">Personal care for you find it here</p>
 					</div>
 				</div>
 			</div>
@@ -146,8 +126,8 @@
 				<div class="service-block mb-5">
 					<img src="images/service/service-3.jpg" alt="" class="img-fluid">
 					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">CT scan</h4>
-						<p class="mb-4">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
+						<h4 class="mt-4 mb-2 title-color">Supplement Sale</h4>
+						<p class="mb-4">We offer supplement to take care of your health!</p>
 					</div>
 				</div>
 			</div>
@@ -158,7 +138,7 @@
 					<img src="images/service/service-4.jpg" alt="" class="img-fluid">
 					<div class="content">
 						<h4 class="mt-4 mb-2 title-color">Joint replacement</h4>
-						<p class="mb-4">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
+						<p class="mb-4">For your bones and joints</p>
 					</div>
 				</div>
 			</div>
@@ -168,7 +148,7 @@
 					<img src="images/service/service-6.jpg" alt="" class="img-fluid">
 					<div class="content">
 						<h4 class="mt-4 mb-2 title-color">Examination & Diagnosis</h4>
-						<p class="mb-4">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
+						<p class="mb-4">Diagnosis of your health!!</p>
 					</div>
 				</div>
 			</div>
