--- a/confirmation.html
+++ b/confirmation.html
@@ -133,7 +133,7 @@
 
 					<ul class="list-unstyled footer-menu lh-35">
 						<li><a href="#">Surgery </a></li>
-						<li><a href="#">Wome's Health</a></li>
+						<li><a href="#">Women's Health</a></li>
 						<li><a href="#">Radiology</a></li>
 						<li><a href="#">Cardioc</a></li>
 						<li><a href="#">Medicine</a></li>
@@ -166,7 +166,7 @@
 							<i class="icofont-email mr-3"></i>
 							<span class="h6 mb-0">Support Available for 24/7</span>
 						</div>
-						<h4 class="mt-2"><a href="tel:+23-345-67890">Support@email.com</a></h4>
+						<h4 class="mt-2"><a href="tel:+23-345-67890">Kingawellness@email.com</a></h4>
 					</div>
 
 					<div class="footer-contact-block">
@@ -174,7 +174,7 @@
 							<i class="icofont-support mr-3"></i>
 							<span class="h6 mb-0">Mon to Fri : 08:30 - 18:00</span>
 						</div>
-						<h4 class="mt-2"><a href="tel:+23-345-67890">+23-456-6588</a></h4>
+						<h4 class="mt-2"><a href="tel:+254715741471">+254 715 741 471</a></h4>
 					</div>
 				</div>
 			</div>
@@ -183,15 +183,12 @@
 		<div class="footer-btm py-4 mt-5">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6">
-					<div class="copyright">
-						&copy; Copyright Reserved to <span class="text-color">Novena</span> by <a href="https://themefisher.com/" target="_blank">Themefisher</a>
-					</div>
+
 				</div>
 				<div class="col-lg-6">
 					<div class="subscribe-form text-lg-right mt-5 mt-lg-0">
 						<form action="#" class="subscribe">
-							<input type="text" class="form-control" placeholder="Your Email address">
-							<a href="#" class="btn btn-main-2 btn-round-full">Subscribe</a>
+
 						</form>
 					</div>
 				</div>
