Touches here and there

--- a/about.html
+++ b/about.html
@@ -125,7 +125,9 @@
 				<h2 class="title-color">Personal care for your healthy living</h2>
 			</div>
 			<div class="col-lg-8">
-				<p>At Kinga Health And Wellness Center, we dedicate ourselves to fostering personal care and promoting healthy living. Our holistic approach encompasses a range of services designed to support your health journey, from preventive measures and wellness programs to personalized treatments. We believe in nurturing both the body and mind to achieve optimal well-being for every individual who walks through our doors.</p>
+				<p>
+				
+					Kinga Ceragem Limited, established in 2016 in Kenya, aims to enhance human life through innovative spinal therapeutic appliances, dietary supplements, and business consultancy services, focusing on protecting and promoting the health and interests of individuals and corporations globally.</p>
 				<img src="images/about/sign.png" alt="" class="img-fluid">
 			</div>
 		</div>
@@ -134,35 +136,60 @@
 
 <section class="fetaure-page ">
 	<div class="container">
+		<h4 class="title-color">Our Services</h4>
 		<div class="row">
 			<div class="col-lg-3 col-md-6">
 				<div class="about-block-item mb-5 mb-lg-0">
-					<img src="images/about/about-1.jpg" alt="" class="img-fluid w-100">
-					<h4 class="mt-3">Healthcare for Kids</h4>
-					<p>We have a specialized healthcare for kids</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="about-block-item mb-5 mb-lg-0">
 					<img src="images/about/about-2.jpg" alt="" class="img-fluid w-100">
-					<h4 class="mt-3">Medical Counseling</h4>
-					<p>We offer medical counseling to our patients</p>
+					<h4 class="mt-3">First Time Consultation</h4>
+					<p>The process includes new customer registration with health protocol adherence, consultation on healthcare history aligning with Kinga Ceragem & Alternative Medicine, and guidance for maximizing customer benefits moving forward.</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6">
 				<div class="about-block-item mb-5 mb-lg-0">
 					<img src="images/about/about-3.jpg" alt="" class="img-fluid w-100">
-					<h4 class="mt-3">Modern Equipments</h4>
-					<p>We at  are equipped with modern, state-of-the-art equipment. </p>
+					<h4 class="mt-3">Daily Walk-in Customer</h4>
+					<p>
+						Customers are advised to use Kinga Ceragem thermo-therapeutic devices for at least two 2-hour sessions daily, with a 1-hour daily session at the center also proving effective; waiting time should not exceed 30 minutes due to traffic. </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6">
 				<div class="about-block-item">
 					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
-					<h4 class="mt-3">Qualified Doctors</h4>
-					<p>Expert medical professionals dedicated to your health and well-being.</p>
+					<h4 class="mt-3">Online Reservation Customer</h4>
+					<p>Similar to daily work in but no waiting since its express service for extremely busy walk-in clients</p>
 				</div>
 			</div>
+
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">2-week Kinga@ Home Special Session </h4>
+					<p>
+						The product is designed for convenient home use, accessible to family, friends, and relatives for three or more daily sessions, complemented by personalized healthcare management services offered by Kinga Healthcare Consultants </p>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3"> Home device experiential service </h4>
+					<p>
+						We provide Kinga Home services where customers can rent our thermo-acupressure devices for two weeks or a month at a reasonable fee, delivered to their premises with guidance from a healthcare consultant
+					</p>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">Outdoor service for Corporates and Institutions </h4>
+					<p>
+						We Partner with Corporates and institutions to offer our health care management services for the benefit of their key stakeholders such as employees/staff, customers and their other valued stakeholders. 
+					</p>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </section>
@@ -362,15 +389,17 @@
 
 			<div class="col-lg-2 col-md-6 col-sm-6">
 				<div class="widget mb-5 mb-lg-0">
-					<h4 class="text-capitalize mb-3">Department</h4>
+					<h4 class="text-capitalize mb-3">Our core Values</h4>
 					<div class="divider mb-4"></div>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Surgery </a></li>
-						<li><a href="#">Wome's Health</a></li>
-						<li><a href="#">Radiology</a></li>
-						<li><a href="#">Cardioc</a></li>
-						<li><a href="#">Medicine</a></li>
+						<li><a href="#">Quality </a></li>
+						<li><a href="#">Teamwork</a></li>
+						<li><a href="#">Customer service</a></li>
+						<li><a href="#">Professionalism</a></li>
+						<li><a href="#">Human Dignity</a></li>
+						<li><a href="#">Integrity</a></li>
+						<li><a href="#">Social Responsibility</a></li>
 					</ul>
 				</div>
 			</div>
