--- a/contact.html
+++ b/contact.html
@@ -272,17 +272,20 @@
 				</div>
 			</div>
 
+
 			<div class="col-lg-2 col-md-6 col-sm-6">
 				<div class="widget mb-5 mb-lg-0">
-					<h4 class="text-capitalize mb-3">Support</h4>
+					<h4 class="text-capitalize mb-3">Our core Values</h4>
 					<div class="divider mb-4"></div>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Terms & Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="#">Company Support </a></li>
-						<li><a href="#">FAQuestions</a></li>
-						<li><a href="#">Company Licence</a></li>
+						<li><a href="#">Quality </a></li>
+						<li><a href="#">Teamwork</a></li>
+						<li><a href="#">Customer service</a></li>
+						<li><a href="#">Professionalism</a></li>
+						<li><a href="#">Human Dignity</a></li>
+						<li><a href="#">Integrity</a></li>
+						<li><a href="#">Social Responsibility</a></li>
 					</ul>
 				</div>
 			</div>
