--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-heart-beat-alt text-lg"></i>
-						<h4 class="mt-3 mb-3">Heart Disease</h4>
+						<h4 class="mt-3 mb-3">Spinal therapeutic appliances</h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">We Treat Heat Disease Problems</p>
+						<p class="mb-4">We deal with spinal therapeutic appliances</p>
 					</div>
 				</div>
 			</div>
@@ -272,10 +272,10 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-tooth text-lg"></i>
-						<h4 class="mt-3 mb-3">Dental Care</h4>
+						<h4 class="mt-3 mb-3">Dietary Supplements</h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">Taking care of the Dental Formula</p>
+						<p class="mb-4">We offer dietary supplements</p>
 					</div>
 				</div>
 			</div>
@@ -285,11 +285,11 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-crutch text-lg"></i>
-						<h4 class="mt-3 mb-3">Body Surgery</h4>
+						<h4 class="mt-3 mb-3">Out patient care</h4>
 					</div>
 
 					<div class="content">
-						<p class="mb-4">We have experts taking of the Body Surgery</p>
+						<p class="mb-4">We offer Out patient care</p>
 					</div>
 				</div>
 			</div>
@@ -298,10 +298,10 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-brain-alt text-lg"></i>
-						<h4 class="mt-3 mb-3">Spine Care</h4>
+						<h4 class="mt-3 mb-3">Home care </h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">We also take care of your Spine</p>
+						<p class="mb-4">We offer home based care to our patients</p>
 					</div>
 				</div>
 			</div>
@@ -495,15 +495,17 @@
 
 			<div class="col-lg-2 col-md-6 col-sm-6">
 				<div class="widget mb-5 mb-lg-0">
-					<h4 class="text-capitalize mb-3">Department</h4>
+					<h4 class="text-capitalize mb-3">Our core Values</h4>
 					<div class="divider mb-4"></div>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Surgery </a></li>
-						<li><a href="#">Wome's Health</a></li>
-						<li><a href="#">Radiology</a></li>
-						<li><a href="#">Cardioc</a></li>
-						<li><a href="#">Medicine</a></li>
+						<li><a href="#">Quality </a></li>
+						<li><a href="#">Teamwork</a></li>
+						<li><a href="#">Customer service</a></li>
+						<li><a href="#">Professionalism</a></li>
+						<li><a href="#">Human Dignity</a></li>
+						<li><a href="#">Integrity</a></li>
+						<li><a href="#">Social Responsibility</a></li>
 					</ul>
 				</div>
 			</div>
