--- a/products.html
+++ b/products.html
@@ -120,19 +120,19 @@
 	          <label class="btn active ">
 	            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Products
 	          </label>
-	          <!-- <label class="btn ">
-	            <input type="radio" name="shuffle-filter" value="cat1" />Cardiology
-	          </label>
-	          <label class="btn">
-	            <input type="radio" name="shuffle-filter" value="cat2" />Dental
-	          </label>
-	          <label class="btn">
-	            <input type="radio" name="shuffle-filter" value="cat3" />Neurology
-	          </label>
-	          <label class="btn">
-	            <input type="radio" name="shuffle-filter" value="cat4" />Medicine
+	           <label class="btn ">
+	            <input type="radio" name="shuffle-filter" value="cat1" />Spinal thermo-acupressure
 	          </label>
 	           <label class="btn">
+	            <input type="radio" name="shuffle-filter" value="cat2" />Body Thermo-therapeutic Massage
+	          </label>
+	          <label class="btn">
+	            <input type="radio" name="shuffle-filter" value="cat3" />Shoulder and Knee Massagers
+	          </label>
+	          <label class="btn">
+	            <input type="radio" name="shuffle-filter" value="cat4" />Nutritional Supplementation
+	          </label>
+	           <!-- <label class="btn">
 	            <input type="radio" name="shuffle-filter" value="cat5" />Pediatric
 	          </label>
 	          <label class="btn">
@@ -178,7 +178,7 @@
 		            </div>
 	            </div>
                 <div class="content mt-3">
-                	<h4 class="mb-0"><a href="">Reishi Coffee</a></h4>
+                	<h4 class="mb-0"><a href="">Reishi Coffee 1 & 3</a></h4>
                 	<p>Helps In </p>
                 </div> 
 	      	</div>
@@ -331,18 +331,19 @@
 					</ul>
 				</div>
 			</div>
-
+			
 			<div class="col-lg-2 col-md-6 col-sm-6">
 				<div class="widget mb-5 mb-lg-0">
-					<h4 class="text-capitalize mb-3">Department</h4>
+					<h4 class="text-capitalize mb-3">Our core Values</h4>
 					<div class="divider mb-4"></div>
-
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Surgery </a></li>
-						<li><a href="#">Wome's Health</a></li>
-						<li><a href="#">Radiology</a></li>
-						<li><a href="#">Cardioc</a></li>
-						<li><a href="#">Medicine</a></li>
+						<li><a href="#">Quality </a></li>
+						<li><a href="#">Teamwork</a></li>
+						<li><a href="#">Customer service</a></li>
+						<li><a href="#">Professionalism</a></li>
+						<li><a href="#">Human Dignity</a></li>
+						<li><a href="#">Integrity</a></li>
+						<li><a href="#">Social Responsibility</a></li>
 					</ul>
 				</div>
 			</div>
