--- a/service.html
+++ b/service.html
@@ -198,17 +198,20 @@
 				</div>
 			</div>
 
+
 			<div class="col-lg-2 col-md-6 col-sm-6">
 				<div class="widget mb-5 mb-lg-0">
-					<h4 class="text-capitalize mb-3">Department</h4>
+					<h4 class="text-capitalize mb-3">Our core Values</h4>
 					<div class="divider mb-4"></div>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Surgery </a></li>
-						<li><a href="#">Wome's Health</a></li>
-						<li><a href="#">Radiology</a></li>
-						<li><a href="#">Cardioc</a></li>
-						<li><a href="#">Medicine</a></li>
+						<li><a href="#">Quality </a></li>
+						<li><a href="#">Teamwork</a></li>
+						<li><a href="#">Customer service</a></li>
+						<li><a href="#">Professionalism</a></li>
+						<li><a href="#">Human Dignity</a></li>
+						<li><a href="#">Integrity</a></li>
+						<li><a href="#">Social Responsibility</a></li>
 					</ul>
 				</div>
 			</div>
