--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row align-items-center">
 			<div class="col-lg-12 testimonial-wrap-2">
 				<div class="testimonial-block style-2  gray-bg">
@@ -469,7 +469,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </section>
 
 <!-- footer Start -->
