--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 		</div>
 	</div>
 </section>
-<section class="cta-section ">
+<!-- <section class="cta-section ">
 	<div class="container">
 		<div class="cta position-relative">
 			<div class="row">
@@ -227,7 +227,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <section class="section service gray-bg">
 	<div class="container">
 		<div class="row justify-content-center">
