--- a/service.html
+++ b/service.html
@@ -98,73 +98,68 @@
 </section>
 
 
-<section class="section service-2">
+<section class="fetaure-page ">
 	<div class="container">
+		<h4 class="title-color">Our Services</h4>
 		<div class="row">
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-block mb-5">
-					<img src="images/service/child-10.jpg" alt="" class="img-fluid">
-					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">Spine Care</h4>
-						<p class="mb-4">
-							We offer Spine Care at our facility, Welcome!! </p>
-					</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item mb-5 mb-lg-0">
+					<img src="images/about/about-2.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">First Time Consultation</h4>
+					<p>The process includes new customer registration with health protocol adherence, consultation on healthcare history aligning with Kinga Ceragem & Alternative Medicine, and guidance for maximizing customer benefits moving forward.</p>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item mb-5 mb-lg-0">
+					<img src="images/about/about-3.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">Daily Walk-in Customer</h4>
+					<p>
+						Customers are advised to use Kinga Ceragem thermo-therapeutic devices for at least two 2-hour sessions daily, with a 1-hour daily session at the center also proving effective; waiting time should not exceed 30 minutes due to traffic. </p>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">Online Reservation Customer</h4>
+					<p>Similar to daily work in but no waiting since its express service for extremely busy walk-in clients</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-block mb-5">
-					<img src="images/service/service-2.jpg" alt="" class="img-fluid">
-					<div class="content">
-						<h4 class="mt-4 mb-2  title-color">Personal Care</h4>
-						<p class="mb-4">Personal care for you find it here</p>
-					</div>
-				</div>
-			</div>
-			
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-block mb-5">
-					<img src="images/service/service-3.jpg" alt="" class="img-fluid">
-					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">Supplement Sale</h4>
-						<p class="mb-4">We offer supplement to take care of your health!</p>
-					</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">2-week Kinga@ Home Special Session </h4>
+					<p>
+						The product is designed for convenient home use, accessible to family, friends, and relatives for three or more daily sessions, complemented by personalized healthcare management services offered by Kinga Healthcare Consultants </p>
 				</div>
 			</div>
 
-
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-block mb-5 mb-lg-0">
-					<img src="images/service/service-4.jpg" alt="" class="img-fluid">
-					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">Joint replacement</h4>
-						<p class="mb-4">For your bones and joints</p>
-					</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3"> Home device experiential service </h4>
+					<p>
+						We provide Kinga Home services where customers can rent our thermo-acupressure devices for two weeks or a month at a reasonable fee, delivered to their premises with guidance from a healthcare consultant
+					</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-block mb-5 mb-lg-0">
-					<img src="images/service/service-6.jpg" alt="" class="img-fluid">
-					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">Examination & Diagnosis</h4>
-						<p class="mb-4">Diagnosis of your health!!</p>
-					</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="about-block-item">
+					<img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+					<h4 class="mt-3">Outdoor service for Corporates and Institutions </h4>
+					<p>
+						We Partner with Corporates and institutions to offer our health care management services for the benefit of their key stakeholders such as employees/staff, customers and their other valued stakeholders. 
+					</p>
 				</div>
 			</div>
-			
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-block mb-5 mb-lg-0">
-					<img src="images/service/service-8.jpg" alt="" class="img-fluid">
-					<div class="content">
-						<h4 class="mt-4 mb-2 title-color">Alzheimer's disease</h4>
-						<p class="mb-4">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
-					</div>
-				</div>
-			</div>
+
 		</div>
 	</div>
 </section>
+
+
+
 <section class="section cta-page">
 	<div class="container">
 		<div class="row">
