--- a/products.html
+++ b/products.html
@@ -146,12 +146,12 @@
 	      	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 	               <div class="doctor-img">
-	               		<img src="images/products/reishi-coffee.jpeg" alt="Product-image" class="img-fluid w-100">
+	               		<img src="images/products/ceragem-master-bed.jpg" alt="Product-image" class="img-fluid w-100">
 	               </div>
 	            </div>
                 <div class="content mt-3">
-                	<h4 class="mb-0"><a href="">Reishi Coffee</a></h4>
-                	<p>Helps in .....</p>
+                	<h4 class="mb-0"><a href="">Ceragem Master V3</a></h4>
+                	<p>An automatic spinal thermo-acupressure massage device that aids in the management of human health through spine realignment and spinal nerve stimulation.</p>
                 </div> 
 	      	</div>
       	</div>
@@ -160,12 +160,12 @@
         	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
-		               <img src="images/products/reishi-coffee.jpeg" alt="product - image" class="img-fluid w-100">
+		               <img src="images/products/ceragem-mat.jpg" alt="product - image" class="img-fluid w-100">
 		            </div>
 	            </div>
                 <div class="content mt-3">
-                	<h4 class="mb-0"><a href="">Reishi Coffee</a></h4>
-                	<p>Helps In</p>
+                	<h4 class="mb-0"><a href="">Thermo-Therapeutic Ceratonic Mat</a></h4>
+                	<p>A healthful mat made from loess. It provides comfortable thermal therapy, enhances sleep, and strengthens immunity</p>
                 </div> 
 	      	</div>
       </div>
@@ -174,26 +174,26 @@
         	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
-		               <img src="images/products/reishi-coffee.jpeg" alt="product - image" class="img-fluid w-100">
+		               <img src="images/products/ceragem-slim Belt.jpg" alt="product - image" class="img-fluid w-100">
 		            </div>
 	            </div>
                 <div class="content mt-3">
-                	<h4 class="mb-0"><a href="">Reishi Coffee 1 & 3</a></h4>
-                	<p>Helps In </p>
+                	<h4 class="mb-0"><a href="">Thermo-Therapeutic Belt</a></h4>
+                	<p>A compact health mat focused radiant far infrared heat. It offers various health benefits, including improved blood circulation and metabolism.</p>
                 </div> 
 	      	</div>
       </div>
 
-      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat3&quot;,&quot;cat4&quot;]">
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" style="margin-top: 80px;" data-groups="[&quot;cat3&quot;,&quot;cat4&quot;]">
         	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
-		               <img src="images/products/pets-img.jpg" alt="product - image" class="img-fluid w-100">
+		               <img src="images/products/sit-on-cushion-removebg-preview.png" alt="product - image" class="img-fluid w-100">
 		            </div>
 	            </div>
                 <div class="content mt-3">
-                	<h4 class="mb-0"><a href="">Resihi Coffee</a></h4>
-                	<p>Helps In</p>
+                	<h4 class="mb-0"><a href="">Thermo-Therapeutic Sit-on Cushion</a></h4>
+                	<p>A portable cushion that stimulates genital and intestinal organs, aiding various health issues.</p>
                 </div> 
 	      	</div>
       </div>
@@ -202,21 +202,21 @@
         	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
-		               <img src="images/products/Hair-vitamin.jpg" alt="product - image" class="img-fluid w-100">
+		               <img src="images/products/Heelax.jpg" alt="product - image" class="img-fluid w-100">
 		            </div>
 	            </div>
                 <div class="content mt-3">
-                	<h4 class="mb-0"><a href="">Reishi Coffee</a></h4>
-                	<p>Helps In...</p>
+                	<h4 class="mb-0"><a href=""> Healax (Shoulder Massager)</a></h4>
+                	<p>A device that massages the shoulder through percussion massage with soothing heat.</p>
                 </div> 
 	      	</div>
       	</div>
 
-      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat6&quot;]">
+      <!-- <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat6&quot;]">
        		 <div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
-		               <img src="images/products//cody-ceps.jpeg" alt="product - image" class="img-fluid w-100">
+		               <img src="images/products/cody-ceps.jpeg" alt="product - image" class="img-fluid w-100">
 		            </div>
 	            </div>
                 <div class="content mt-3">
@@ -295,7 +295,7 @@
                 </div> 
 	      	</div>
         </div>
-    </div>
+    </div> -->
   </div>
 </section>
 <!-- /portfolio -->
@@ -373,7 +373,7 @@
 							<i class="icofont-email mr-3"></i>
 							<span class="h6 mb-0">Support Available for 24/7</span>
 						</div>
-						<h4 class="mt-2"><a href="tel:+23-345-67890">Support@email.com</a></h4>
+						<h4 class="mt-2"><a href="tel:+23-345-67890">kingawellness@gmail.com</a></h4>
 					</div>
 
 					<div class="footer-contact-block">
