--- a/products.html
+++ b/products.html
@@ -170,11 +170,11 @@
 	      	</div>
       </div>
 
-      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat3&quot;]">
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" style="margin-top: 80px;" data-groups="[&quot;cat3&quot;]">
         	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
-		               <img src="images/products/ceragem-slim Belt.jpg" alt="product - image" class="img-fluid w-100">
+		               <img src="images/products/belt.png" alt="product - image" class="img-fluid w-100">
 		            </div>
 	            </div>
                 <div class="content mt-3">
