Changed some pics here and there

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-heart-beat-alt text-lg"></i>
-						<h4 class="mt-3 mb-3">Spinal therapeutic appliances</h4>
+						<h4 style="font-size: 20px;" class="mt-3 mb-3">Therapeutic appliances</h4>
 					</div>
 					<div class="content">
 						<p class="mb-4">We deal with spinal therapeutic appliances</p>
@@ -271,11 +271,11 @@
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
-						<i class="icofont-tooth text-lg"></i>
+						<i class="icofont-capsule text-lg"></i>
 						<h4 class="mt-3 mb-3">Dietary Supplements</h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">We offer dietary supplements</p>
+						<p class="mb-4">We offer high-quality dietary supplements for optimal health benefits.</p>
 					</div>
 				</div>
 			</div>
@@ -289,7 +289,7 @@
 					</div>
 
 					<div class="content">
-						<p class="mb-4">We offer Out patient care</p>
+						<p class="mb-4">We offer comprehensive outpatient care services</p>
 					</div>
 				</div>
 			</div>
@@ -301,12 +301,12 @@
 						<h4 class="mt-3 mb-3">Home care </h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">We offer home based care to our patients</p>
+						<p class="mb-4">We offer personalized home-based care to our patients.</p>
 					</div>
 				</div>
 			</div>
 			
-			<div class="col-lg-4 col-md-6 col-sm-6">
+			<!-- <div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-dna-alt-1 text-lg"></i>
@@ -316,7 +316,7 @@
 						<p class="mb-4">Meet Our well trained specialist in this area</p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </section>
