--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
 					<p>The process includes new customer registration with health protocol adherence, consultation on healthcare history aligning with Kinga Ceragem & Alternative Medicine, and guidance for maximizing customer benefits moving forward.</p>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6">
+			<div class="col-lg-3 col-md-6" style="margin-top: 30px;">
 				<div class="about-block-item mb-5 mb-lg-0">
 					<img src="images/about/about-3.jpg" alt="" class="img-fluid w-100">
 					<h4 class="mt-3">Daily Walk-in Customer</h4>
@@ -238,7 +238,7 @@
 	</div> 
 </section> -->
 
-<section class="section team">
+<!-- <section class="section team">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-6">
@@ -295,7 +295,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <section class="section testimonial">
 	<div class="container">
