--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
 				<div class="about-img mt-4 mt-lg-0">
 					<img src="images/about/img-3.jpg" alt="" class="img-fluid">
 				</div>
+				<br></br>
+				<div class="about-img mt-4 mt-lg-0">
+					<img src="images/products/ceragem-master-bed.jpg" alt="" class="img-fluid">
+				</div>
 			</div>
 			<div class="col-lg-4">
 				<div class="about-content pl-4 mt-4 mt-lg-0">
