--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
 						<img src="images/logo.png" alt="" class="img-fluid">
 					</div>
 					<p>
-						Our center aims at providing high-quality and convenient health services
+						our center aims at providing high quality and convenient health care and management services.
 					</p>
 
 					<ul class="list-inline footer-socials mt-4">
@@ -306,7 +306,7 @@
 					<div class="footer-contact-block">
 						<div class="icon d-flex align-items-center">
 							<i class="icofont-support mr-3"></i>
-							<span class="h6 mb-0">Mon to Fri : 08:30 - 18:00</span>
+							<span class="h6 mb-0">Mon to Fri : 08:00 - 22:00 HRS</span>
 						</div>
 						<h4 class="mt-2"><a href="tel:+254715741471">+254 715 741 471</a></h4>
 					</div>
