--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <style>
 	.spinner {
 		display: none;
+
+
 		width: 50px;
 		height: 50px;
 		border: 5px solid lightgray;
@@ -112,7 +114,7 @@
 					<span class="text-uppercase text-sm letter-spacing ">Total Health care solution</span>
 					<h1 class="mb-3 mt-3">Kinga Health and Wellness Center</h1>
 					
-					<p class="mb-4 pr-5">Our center aims at providing high-quality and convenient health services.</p>
+					<p class="mb-4 pr-5">our center aims at providing high quality and convenient health care and management services.</p>
 					<div class="btn-container ">
 						<a href="appoinment.html" target="_blank" class="btn btn-main-2 btn-icon btn-round-full">Make appoinment <i class="icofont-simple-right ml-2  "></i></a>
 					</div>
@@ -143,9 +145,9 @@
 						<span>Timing schedule</span>
 						<h4 class="mb-3">Working Hours</h4>
 						<ul class="w-hours list-unstyled">
-		                    <li class="d-flex justify-content-between">Mon - Fri : <span>8:00 - 17:00</span></li>
-		                    <li class="d-flex justify-content-between">Sat : <span>9:00 - 17:00</span></li>
-		                    <li class="d-flex justify-content-between">Sun : <span> 10:00 - 17:00 </span></li>
+		                    <li class="d-flex justify-content-between">Mon - Fri : <span>08:00 - 22:00 HRS</span></li>
+		                    <li class="d-flex justify-content-between">Sat : <span>08:00 - 17:00 HRS</span></li>
+		                    <li class="d-flex justify-content-between">Sun : <span> 14:00- 18:00 HRS </span></li>
 		                </ul>
 					</div>
 				
@@ -153,9 +155,9 @@
 						<div class="feature-icon mb-4">
 							<i class="icofont-support"></i>
 						</div>
-						<span>Emegency Cases</span>
+						<span>Reach Out</span>
 						<h4 class="mb-3">+254 715 741 471</h4>
-						<p>Get ALl time support for emergency. We have introduced the principle of family medicine.Get Connected with us for any urgency .</p>
+						<p>Reach to us for any enquiry and consultation for our services as well as booking for home experience.</p>
 					</div>
 				</div>
 			</div>
@@ -169,8 +171,8 @@
 		<div class="row align-items-center">
 			<div class="col-lg-4 col-sm-6">
 				<div class="about-img">
-					<img src="images/about/img-1.jpg" alt="" class="img-fluid">
-					<img src="images/about/img-2.jpg" alt="" class="img-fluid mt-4">
+					<img src="images/products/shoulder_masager.jpg" alt="" class="img-fluid">
+					<img src="images/products/sit-on-cushion." alt="" class="img-fluid mt-4">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
@@ -179,7 +181,7 @@
 				</div>
 				<br></br>
 				<div class="about-img mt-4 mt-lg-0">
-					<img src="images/products/ceragem-master-bed.jpg" alt="" class="img-fluid">
+					<img src="images/products/ceragem-mat.jpg" alt="" class="img-fluid">
 				</div>
 			</div>
 			<div class="col-lg-4">
@@ -237,7 +239,7 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-7 text-center">
 				<div class="section-title">
-					<h2>Award winning patient care</h2>
+					<h2>Our Services</h2>
 					<div class="divider mx-auto my-4"></div>
 					<p>
 						At Kinga Health And Wellness Center, We offer quality services. They are as follows
@@ -251,11 +253,12 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-laboratory text-lg"></i>
-						<h4 class="mt-3 mb-3">Laboratory services</h4>
+						<h4 class="mt-3 mb-3">Triage services</h4>
 					</div>
 
 					<div class="content">
-						<p class="mb-4">Our lab facilities are awesome!</p>
+						<p class="mb-4">We help check on blood pressure and sugar levels to better advise on the usage of our products and services.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -264,10 +267,10 @@
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-heart-beat-alt text-lg"></i>
-						<h4 style="font-size: 20px;" class="mt-3 mb-3">Therapeutic appliances</h4>
+						<h4 style="font-size: 20px;" class="mt-3 mb-3"> Spine Care Services</h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">We deal with spinal therapeutic appliances</p>
+						<p class="mb-4">we offer a variety of spinal thermo- acupressure massage services for maximum health care management.</p>
 					</div>
 				</div>
 			</div>
@@ -285,27 +288,28 @@
 			</div>
 
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
+			<!-- <div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-crutch text-lg"></i>
-						<h4 class="mt-3 mb-3">Out patient care</h4>
+						<h4 class="mt-3 mb-3">Out Customer care</h4>
 					</div>
 
 					<div class="content">
-						<p class="mb-4">We offer comprehensive outpatient care services</p>
+						<p class="mb-4">We offer comprehensive outCustomer care services</p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-4">
 					<div class="icon d-flex align-items-center">
 						<i class="icofont-brain-alt text-lg"></i>
-						<h4 class="mt-3 mb-3">Home care </h4>
+						<h4 class="mt-3 mb-3">Echome services </h4>
 					</div>
 					<div class="content">
-						<p class="mb-4">We offer personalized home-based care to our patients.</p>
+						<p class="mb-4">We offer personalized home based care for a period of two weeks to a month for our clients.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -384,7 +388,7 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-7">
 				<div class="section-title text-center">
-					<h2>We served over 3000+ Patients</h2>
+					<h2>We served over 50,000+ Customers</h2>
 					<div class="divider mx-auto my-4"></div>
 					<p>Each individual’s health and well-being have been our top priority, and we take pride in the trust placed in our services. Our dedicated team of professionals continues to strive for the highest standards of care</p>
 				</div>
@@ -399,7 +403,7 @@
 					<i class="icofont-quote-right"></i>
 
 					<div class="testimonial-thumb">
-						<img src="images/patients/image.png" alt="" class="img-fluid">
+						<img src="images/Customers/image.png" alt="" class="img-fluid">
 					</div>
 
 					<div class="client-info ">
@@ -413,7 +417,7 @@
 
 				<div class="testimonial-block style-2  gray-bg">
 					<div class="testimonial-thumb">
-						<img src="images/patients/image.png" alt="" class="img-fluid">
+						<img src="images/Customers/image.png" alt="" class="img-fluid">
 					</div>
 
 					<div class="client-info">
@@ -429,7 +433,7 @@
 
 				<div class="testimonial-block style-2  gray-bg">
 					<div class="testimonial-thumb">
-						<img src="images/patients/image.png" alt="" class="img-fluid">
+						<img src="images/Customers/image.png" alt="" class="img-fluid">
 					</div>
 
 					<div class="client-info">
@@ -445,7 +449,7 @@
 
 				<div class="testimonial-block style-2  gray-bg">
 					<div class="testimonial-thumb">
-						<img src="images/patients/image.png" alt="" class="img-fluid">
+						<img src="images/Customers/image.png" alt="" class="img-fluid">
 					</div>
 
 					<div class="client-info">
@@ -486,7 +490,7 @@
 						<img src="images/logo.png" alt="" class="img-fluid">
 					</div>
 					<p>
-						Our center aims at providing high-quality and convenient health services
+						our center aims at providing high quality and convenient health care and management services.
 					</p>
 
 					<ul class="list-inline footer-socials mt-4">
@@ -545,7 +549,7 @@
 					<div class="footer-contact-block">
 						<div class="icon d-flex align-items-center">
 							<i class="icofont-support mr-3"></i>
-							<span class="h6 mb-0">Mon to Fri : 08:30 - 18:00</span>
+							<span class="h6 mb-0">Mon to Fri : 08:00 - 22:00 HRS</span>
 						</div>
 						<h4 class="mt-2"><a href="tel:+23-345-67890">+254 715 741 471</a></h4>
 					</div>
