--- a/service.html
+++ b/service.html
@@ -159,6 +159,47 @@
 </section>
 
 
+<section class="fetaure-page">
+	<div class="container">
+		<h4 class="title-color">Our Charges</h4>
+		<table class="table table-striped table-bordered table-hover table-condensed">
+			<thead>
+				<tr>
+					<th>S/No</th>
+					<th>Service</th>
+					<th>Fee (KES)</th>
+					<th>Description</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>First Time Consultation</td>
+					<td>2,000</td>
+					<td>New Customer registration with attendant health protocols.</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>Daily Walk-in Customer - 1 hour</td>
+					<td>1,000</td>
+					<td>It is recommended that Kinga Ceragem thermo-therapeutic devices be used by customer at minimum twice a day for 2hrs each session but center 1hr daily session is also effective.</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td>Online Reservation Customer - 1 hour</td>
+					<td>1,800</td>
+					<td>Similar to daily walk-in but no waiting since its express service for extremely busy walk-in clients.</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>2-week Kinga@ Home Special Session</td>
+					<td>40,000</td>
+					<td>Designed for convenient home use, accessible to family, friends, and relatives for three or more daily sessions, complemented by personalized healthcare management services offered by Kinga Healthcare Consultants.</td>
+			</tbody>
+		</table>
+	</div>
+</section>
+
 
 <section class="section cta-page">
 	<div class="container">
@@ -183,7 +224,7 @@
 					<div class="logo mb-4">
 						<img src="images/logo.png" alt="" class="img-fluid">
 					</div>
-					<p>Our center aims at providing high-quality and convenient health services.</p>
+					<p>our center aims at providing high quality and convenient health care and management services.</p>
 
 					<ul class="list-inline footer-socials mt-4">
 						<li class="list-inline-item"><a href="https://www.facebook.com/kingamyhealth" target="_blank"><i class="icofont-facebook"></i></a></li>
@@ -242,7 +283,7 @@
 					<div class="footer-contact-block">
 						<div class="icon d-flex align-items-center">
 							<i class="icofont-support mr-3"></i>
-							<span class="h6 mb-0">Mon to Fri : 08:30 - 18:00</span>
+							<span class="h6 mb-0">Mon to Fri : 08:00 - 22:00 HRS</span>
 						</div>
 						<h4 class="mt-2"><a href="tel:++254715741471">+254 715 741 471</a></h4>
 					</div>
