--- a/products.html
+++ b/products.html
@@ -184,7 +184,7 @@
 	      	</div>
       </div>
 
-      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" style="margin-top: 80px;" data-groups="[&quot;cat3&quot;,&quot;cat4&quot;]">
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" style="margin-top: 80px;" data-groups="[&quot;cat3&quot;]">
         	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 		        	<div class="doctor-img">
