change of colors

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		</div>
 	</div>
 </section> -->
-<section class="section service gray-bg">
+<section class="section service gray-bg-me">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-7 text-center">
@@ -383,7 +383,7 @@
 		</div>
 	</div>
 </section>
-<section class="section testimonial-2 gray-bg">
+<section class="section testimonial-2 gray-bg-me">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-7">
@@ -481,7 +481,7 @@
 </section>
 
 <!-- footer Start -->
-<footer class="footer section gray-bg">
+<footer class="footer section gray-bg-me">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mr-auto col-sm-6">
