--- a/about.html
+++ b/about.html
@@ -369,7 +369,7 @@
 	</div>
 </section>
 <!-- footer Start -->
-<footer class="footer section gray-bg">
+<footer class="footer section gray-bg-me">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mr-auto col-sm-6">
