--- a/appoinment.html
+++ b/appoinment.html
@@ -231,7 +231,7 @@
 
 
 <!-- footer Start -->
-<footer class="footer section gray-bg">
+<footer class="footer section gray-bg-me">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mr-auto col-sm-6">
