--- a/confirmation.html
+++ b/confirmation.html
@@ -107,7 +107,7 @@
 </section>
 
 <!-- footer Start -->
-<footer class="footer section gray-bg">
+<footer class="footer section gray-bg-me">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mr-auto col-sm-6">
