--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,7 @@
     <div id="map"></div>
 </div> -->
 <!-- footer Start -->
-<footer class="footer section gray-bg">
+<footer class="footer section gray-bg-me">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mr-auto col-sm-6">
