--- a/service.html
+++ b/service.html
@@ -98,7 +98,7 @@
 </section>
 
 
-<section class="fetaure-page ">
+<!-- <section class="fetaure-page ">
 	<div class="container">
 		<h4 class="title-color">Our Services</h4>
 		<div class="row">
@@ -156,10 +156,10 @@
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
-<section class="fetaure-page">
+<section class="fetaure-page gray-bg-me">
 	<div class="container">
 		<h4 class="title-color">Our Charges</h4>
 		<table class="table table-striped table-bordered table-hover table-condensed">
@@ -216,7 +216,7 @@
 </section>
 
 <!-- footer Start -->
-<footer class="footer section gray-bg">
+<footer class="footer section gray-bg-me">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 mr-auto col-sm-6">
