--- a/products.html
+++ b/products.html
@@ -94,7 +94,7 @@
       <div class="col-md-12">
         <div class="block text-center">
           <span class="text-white">All Products</span>
-          <h1 class="text-capitalize mb-5 text-lg">Kenga Wellness Center Products </h1>
+          <h1 class="text-capitalize mb-5 text-lg">Kinga Wellness Center Products </h1>
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
       </div>
 
     <div class="row shuffle-wrapper portfolio-gallery">
-      	<div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat1&quot;,&quot;cat2&quot;]">
+      	<!-- <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat1&quot;,&quot;cat2&quot;]">
 	      	<div class="position-relative doctor-inner-box">
 		        <div class="doctor-profile">
 	               <div class="doctor-img">
@@ -154,7 +154,7 @@
                 	<p>An automatic spinal thermo-acupressure massage device that aids in the management of human health through spine realignment and spinal nerve stimulation.</p>
                 </div> 
 	      	</div>
-      	</div>
+      	</div> -->
 
       <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat2&quot;]">
         	<div class="position-relative doctor-inner-box">
